# fastapi-crud

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: lighthouse.py
src/crud/: __init__.py  app.py  entities.py  lib.py
src/fastapi_bootstrap/: app.py  datasource.py
src/fastapi_crud/: __init__.py
tests/: lighthouse.py
